--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
+    <!--<link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png">-->
+    <!--<link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png">-->
+    <!--<link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png">-->
+    <link rel="manifest" href="/static/manifest.json">
+    <!--<link rel="mask-icon" href="/static/safari-pinned-tab.svg" color="#5bbad5">-->
+    <meta name="apple-mobile-web-app-title" content="Set Game">
+    <meta name="application-name" content="Set Game">
+    <meta name="theme-color" content="#000">
     <title>resistance</title>
   </head>
   <body>
