--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="apple-mobile-web-app-title" content="Set Game">
     <meta name="application-name" content="Set Game">
     <meta name="theme-color" content="#000">
-    <title>resistance</title>
+    <title>social deduction party game</title>
   </head>
   <body>
     <div id="app"></div>
